# alpinist-agent

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  README.md  RELEASE_NOTES_v1.0.0.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alpinist/: __init__.py  __main__.py  agent.py  cli.py  config.py  logging_setup.py
alpinist/providers/: __init__.py  gemini_provider.py  mock_provider.py
alpinist/telegram_bot/: __init__.py  app.py  handlers.py
docs/: ARCHITECTURE.md  POST_RELEASE_DOI.md  RELEASING.md  SECURITY.md  ZENODO.md
examples/fixtures/: demo_responses.jsonl
scripts/: run_demo.sh  set_doi.sh
tests/: test_agent_demo.py  test_config.py  test_mock_provider.py
